--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <form class="main-form d-md-flex justify-content-between mb-md-4" action="https://htmlacademy.ru/courses" autocomplete="off">
                 <div class="row">
-                    <input class="form-input mb-md-0 col-6" type="text" name="country" aria-label="Search Country" placeholder="Search for a country…" required>
+                    <input class="form-input mb-md-0 md-col-6" type="text" name="country" aria-label="Search Country" placeholder="Search for a country…" required>
                 </div>
                 <select class="countries-select mb-3 mb-md-0" aria-label=".form-select-lg example">
                     <option class="contents">Filter by Region</option>
