--- a/index.html
+++ b/index.html
@@ -40,65 +40,65 @@
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">Germany</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text">Europe</span></string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Berlin</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text">Europe</span></p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Berlin</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
                 <li class="countries-item col-md-4 p-0 mb-5">
                     <a class="countries-link text-decoration-none d-flex flex-column" href="#">
                         <h2 class="countries-name">United States of America</h2>
-                        <string class="countries-info">Population: <span class="countries-info-text">81,770,900</span></string>
-                        <string class="countries-info">Region: <span class="countries-info-text"></span>America</string>
-                        <string class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></string>
+                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
+                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
                     </a>
                 </li>
             </ul>
