--- a/belgium.html
+++ b/belgium.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,92 +19,47 @@
             <button type="button" class="dark-light-node">Dark Mode</button>
         </div>
     </header>
-
+    
     <main class="site-main">
         <div class="container">
-            <form class="main-form d-md-flex justify-content-between mb-md-4" action="https://htmlacademy.ru/courses" autocomplete="off">
-                <div class="row">
-                    <input class="form-input mb-md-0 md-col-6" type="text" name="country" aria-label="Search Country" placeholder="Search for a country…" required>
+            <a class="back pt-2 pb-2 ps-5 pe-2" href="index.html">Back</a>
+            <div class="countries-list list-unstyled row d-flex flex-column align-content-center row mt-5">
+                <div class="countries-item-belgium col-4 p-0 mb-5">
+                    <div class="belgium-wrapper">
+                        <h2 class="countries-name ms-3">Belgium</h2>
+                        <div class="countries-link pt-0 d-md-flex">
+                            <div class="me-md-5 d-flex flex-column">
+                                <p class="countries-info">Native Name: <span class="countries-info-text">Belgium</span></p>
+                                <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
+                                <p class="countries-info">Region: <span class="countries-info-text">Europe</span></p>
+                                <p class="countries-info mb-3">Capital: <span class="countries-info-text">Brussels</span></p>
+                            </div>
+                            <div class="d-flex flex-column">
+                                <p class="countries-info">Top level domain: <span class="countries-info-text">Be</span></p>
+                                <p class="countries-info">Currencies: <span class="countries-info-text">Euro</span></p>
+                                <p class="countries-info">Languages: <span class="countries-info-text">Dutch French Germany</span></p>
+                            </div>
+                        </div>
+                        <div class="border-box p-3">
+                            <strong class="border-countries-name mb-3">Border Countries:</strong>
+                            <ul class="border-list list-unstyled d-flex">
+                                <li class="border-item">
+                                    <a href="#" class="border-link">France</a>
+                                </li>
+                                <li class="border-item">
+                                    <a href="#" class="border-link">Germany</a>
+                                </li>
+                                <li class="border-item">
+                                    <a href="#" class="border-link">Netherlands</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <select class="countries-select mb-3 mb-md-0" aria-label=".form-select-lg example">
-                    <option class="contents">Filter by Region</option>
-                    <option class="contents" value="1">Afrika</option>
-                    <option class="contents" value="2">America</option>
-                    <option class="contents" value="3">Asia</option>
-                    <option class="contents" value="1">Europe</option>
-                    <option class="contents" value="2">Oceania</option>
-                  </select>
-            </form>
-
-            <ul class="countries-list list-unstyled row d-flex flex-column align-content-center flex-md-row justify-content-around">
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="belgium.html">
-                        <h2 class="countries-name">Germany</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text">Europe</span></p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Berlin</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-                <li class="countries-item col-md-4 p-0 mb-5">
-                    <a class="countries-link text-decoration-none d-flex flex-column" href="#">
-                        <h2 class="countries-name">United States of America</h2>
-                        <p class="countries-info">Population: <span class="countries-info-text">81,770,900</span></p>
-                        <p class="countries-info">Region: <span class="countries-info-text"></span>America</p>
-                        <p class="countries-info">Capital: <span class="countries-info-text">Washington D.C</span></p>
-                    </a>
-                </li>
-            </ul>
+            </div>
         </div>
     </main>
-
     <script src="/js/main.js"></script>
+    
 </body>
 </html>
